# jupyter_notebooks

./: .gitignore  README.md
data-science_simple-classification/: LICENSE  data-science-insurance.ipynb  data-science-marketing.ipynb  data-science.ipynb  pyproject.toml  sr-data-analyst.ipynb
data-science_simple-classification/data-science-insurance_data/: test.csv  train.csv
data-science_simple-classification/sr-data-analyst_data/: google-analytics_20190101-20190131_usa-ny_edited.csv  google-analytics_20190101-20190131_usa-ny_raw.csv
nightmares/: README.md  nightmare_alias-reuse.ipynb
