[tool.poetry]
name = "data-science_simple-classification"
version = "0.1.0"
description = "Examples of Simple Classification challenges from a [redacted] company's public GitHub repository."
authors = ["Tommy P. Keane <talk@tommypkeane.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^4.9.0"
pandas = "^1.1.0"
scikit-learn = "^0.23.2"
xgboost = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
